# falcon-core-linux

./: .gitignore  CMakeLists.txt  README.md  extension.yaml  extensions.txt
.github/workflows/: build.yml
common/disruptor/: batch_descriptor.h  claim_strategy.cpp  event_processor.h  event_publisher.h  exception_handler.h  interface.h  ring_buffer.h  sequencer.h  wait_strategy.cpp  wait_strategy.h
common/factory/: factory.hpp
common/logging/: CMakeLists.txt  customsink.cpp  customsink.hpp  log.hpp
common/options/: options.cpp  options.hpp  validation.hpp  value.hpp
common/utilities/: configuration.cpp  configuration.hpp  filesystem.cpp  iterators.hpp  math_numeric.hpp  string.hpp  string.ipp  time.cpp  time.ipp
core/: CMakeLists.txt  buildconstant.hpp.in  commandhandler.hpp  connections.hpp  context.hpp  graphmanager.hpp  idata.cpp  idata.hpp  iprocessor.cpp  iprocessor.hpp  istreamports.cpp  istreamports.hpp  portpolicy.hpp  processorgraph.cpp  serialization.hpp  serializer.cpp  serializer.hpp  sharedstate.hpp  streaminfo.cpp  streaminfo.hpp  streamports.hpp  streamports.ipp  threadutilities.cpp
docs/: client.rst  conf.py  content_table.rst  dev_guide.rst  extending_falcon.rst  index.rst  installation.rst  user_guide.rst
docs/core_extension_doc/: processors.rst  ressource.rst
docs/core_extension_doc/libs/: dsp_lib.rst  nlx_lib.rst
docs/core_extension_doc/processors_description/detector/: burst_detector.rst  burstdetector.rst  level_crossing_detector.rst  levelcrossingdetector.rst  ripple_detector.rst
docs/core_extension_doc/processors_description/digitaloutput/: digital_output.rst
docs/core_extension_doc/processors_description/event/: event_filter.rst  event_logger.rst
docs/core_extension_doc/processors_description/serializers/: ZMQSerializer.rst  file_serializer.rst
docs/doxyfile/: Doxyfile
docs/examples/: graph.rst  ripple_detection.rst
docs/extensions/: Overview.rst  existing_extensions.rst  extend_datatype.rst  extend_overview.rst  extend_processor.rst  overview.rst  tools.rst
docs/internals/: build_system.rst  command_system.rst  config_system.rst  dsp_lib.rst  graph_system.rst  logging_system.rst  overview.rst  processing_graph.rst  thread_management.rst  utilities.rst
docs/manual/: binary_installation.rst  configuration.rst  datatypes.rst  graphs.rst  installation.rst  interaction.rst  processors.rst  troubleshoot.rst  usage.rst
docs/manual/processors_description/: converters.rst  detectors.rst  event.rst  filters.rst  multichanneldata.rst  others.rst  signal_generator.rst  sink.rst
docs/manual/processors_description/converter/: rebuffer.rst  (+1 more)
docs/testing/: debug.rst  test_graphs.rst  test_mode.rst
docs/ui/: create_ui.rst  create_user_side_graph.rst  generic_control.rst  interaction.rst  lib_python.rst
extensions/datatypes/eventdata/: eventdata.cpp  eventdata.hpp
extensions/datatypes/muadata/: muadata.cpp  muadata.hpp
extensions/datatypes/multichanneldata/: multichanneldata.hpp
extensions/datatypes/scalardata/: scalardata.hpp
extensions/datatypes/spikedata/: spikedata.cpp  spikedata.hpp
extensions/datatypes/vectordata/: vectordata.hpp
extensions/lib/: CMakeLists.txt
extensions/lib/dio/: CMakeLists.txt
extensions/lib/dsp/: CMakeLists.txt  filter.hpp
extensions/processors/: exclude.txt
extensions/processors/burstdetector/: burstdetector.cpp  burstdetector.hpp
extensions/processors/digitaloutput/: digitaloutput.cpp  digitaloutput.hpp
extensions/processors/dummysink/: dummysink.cpp  dummysink.hpp
extensions/processors/eventfilter/: eventfilter.cpp  eventfilter.hpp
extensions/processors/eventsink/: eventsink.cpp  eventsink.hpp
extensions/processors/eventsource/: eventsource.cpp  eventsource.hpp
extensions/processors/eventsync/: eventsync.cpp  eventsync.hpp
extensions/processors/fileserializer/: fileserializer.cpp  fileserializer.hpp
extensions/processors/levelcrossingdetector/: levelcrossingdetector.cpp  levelcrossingdetector.hpp
extensions/processors/muaestimator/: CMakeLists.txt  muaestimator.cpp  muaestimator.hpp
extensions/processors/multichannelfilter/: multichannelfilter.cpp  multichannelfilter.hpp
extensions/processors/nlxreader/: CMakeLists.txt  nlxreader.cpp  nlxreader.hpp
extensions/processors/rebuffer/: rebuffer.cpp  rebuffer.hpp
extensions/processors/rippledetector/: rippledetector.cpp  rippledetector.hpp
extensions/processors/runningstats/: runningstats.cpp  runningstats.hpp
extensions/processors/spikedetector/: spikedetector.cpp  spikedetector.hpp
extensions/processors/zmqserializer/: zmqserializer.cpp  zmqserializer.hpp
extensions/template/: todo.txt
falcon/: CMakeLists.txt  buildconstant.hpp.in  commandhandler.cpp  commandhandler.hpp  commandsource.cpp  commandsource.hpp  configuration.cpp  configuration.hpp  configuration.hpp.in  connectionparser.cpp  connectionparser.hpp  connections.cpp  connections.hpp  context.hpp  customsink.cpp  customsink.hpp  datatype.fbs  graphexceptions.hpp  graphmanager.cpp  graphmanager.hpp  idata.cpp  idata.hpp  iprocessor.cpp  iprocessor.hpp  istreamports.cpp  istreamports.hpp  main.cpp  portpolicy.hpp  processorengine.cpp  processorengine.hpp  processorgraph.cpp  processorgraph.hpp  ringbuffer.hpp  runinfo.hpp  serialization.cpp  serialization.hpp  serialize.cpp  serialize.hpp  serializer.cpp  serializer.hpp  (+10 more)
lib/: CMakeLists.txt
lib/disruptor/: claim_strategy.h  sequence.h  sequence_barrier.h
lib/factory/: factory.hpp
lib/logging/: customsink.cpp  customsink.hpp  g3loglevels.hpp  log.hpp
lib/options/: CMakeLists.txt  docs.rst  options.cpp  options.hpp  units.hpp  validation.hpp  value.hpp
lib/utilities/: CMakeLists.txt  Makefile  cmake_install.cmake  configuration.cpp  configuration.hpp  configuration.ipp  filesystem.cpp  filesystem.hpp  g3loglevels.hpp  general.cpp  general.hpp  general.ipp  iterators.hpp  keyboard.cpp  keyboard.hpp  math_numeric.cpp  math_numeric.hpp  math_numeric.ipp  string.cpp  string.hpp  string.ipp  time.cpp  time.hpp  time.ipp  zmqutil.cpp  zmqutil.hpp
scripts/: cmake.sh  make.sh  release.sh
(+79 files in other folders)
